# imdb_search

./: .envrc.EXAMPLE  .gitignore  README.md  application.py  apptest.py  flask_debug_server.sh  foreign_title.sh  pyproject.toml  readme-requirements.txt  requirements.in  requirements.txt  supervisord.conf  supervisord.conf.EXAMPLE  trakt_login.py  us_title.sh  users.json.EXAMPLE  uwsgi.ini
