[project]
name = "imdb-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arrow",
    "asttokens",
    "backcall",
    "blinker",
    "cachetools",
    "certifi",
    "charset-normalizer",
    "click",
    "click-loglevel",
    "decorator",
    "exceptiongroup",
    "executing",
    "flask",
    "flask-login",
    "google-api-core",
    "google-api-python-client",
    "google-auth",
    "google-auth-httplib2",
    "googleapis-common-protos",
    "httplib2",
    "idna",
    "importlib-metadata",
    "ipython",
    "itsdangerous",
    "jedi",
    "jinja2",
    "markupsafe",
    "matplotlib-inline",
    "oauth2client",
    "parso",
    "pexpect",
    "pickleshare",
    "prompt-toolkit",
    "protobuf",
    "ptyprocess",
    "pure-eval",
    "pyasn1",
    "pyasn1-modules",
    "pygments",
    "pyparsing",
    "python-dateutil",
    "requests",
    "rsa",
    "six",
    "stack-data",
    "traitlets",
    "trakt-py",
    "types-python-dateutil",
    "typing-extensions",
    "uritemplate",
    "urllib3",
    "uwsgi",
    "wcwidth",
    "werkzeug",
    "zipp",
]

[tool.black]
line-length = 78

[tool.ruff]
fix = true
line-length = 78

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 78

[tool.pylint.messages_control]
# https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
disable = "C0330, C0326"
